--- a/src/client/assets/stylesheets/index.css
+++ b/src/client/assets/stylesheets/index.css
@@ -16,8 +16,9 @@
 body {
   display: flex;
   flex-direction: column;
-  font-family: Arial;
-  min-height: 100vh;
+  font-family: Arial, serif;
+  min-height: 100%;
+  min-width: 100vw;
 }
 
 header {
@@ -54,7 +55,7 @@ h3 {
 
 h4 {
   color: #545454;
-  font-weight: light;
+  font-weight: normal;
   font-size: 20px;
 }
 
