--- a/src/client/assets/stylesheets/form.css
+++ b/src/client/assets/stylesheets/form.css
@@ -5,9 +5,9 @@ form ul {
 
 form li {
     border-radius: 6px;
-    -webkit-box-shadow: 5px 7px 5px 0px rgba(237,230,237,1);
-    -moz-box-shadow: 5px 7px 5px 0px rgba(237,230,237,1);
-    box-shadow: 5px 7px 5px 0px rgba(237,230,237,1);
+    -webkit-box-shadow: 5px 7px 5px 0 rgba(237,230,237,1);
+    -moz-box-shadow: 5px 7px 5px 0 rgba(237,230,237,1);
+    box-shadow: 5px 7px 5px 0 rgba(237,230,237,1);
     max-width: 300px;
     padding: 20px;
     border: 1px solid #fbf5f5;
